[package]
name = "leaf-ffi"
version = "0.1.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2018"

[lib]
name = "leaf"
path = "src/lib.rs"
crate-type = ["staticlib", "dylib"]

# Linker settings for 16KB page size support
[target.'cfg(target_os = "android")'.dependencies]
# Existing dependencies...

# Add linker settings
[target.'cfg(target_os = "android")'.linker]
rustflags = [
    "-C", "link-arg=-Wl,-z,common-page-size=0x4000",
    "-C", "link-arg=-Wl,-z,max-page-size=0x4000",
]

[features]
default = [
    "default-ring",
]

default-aws-lc= [
    "leaf/default-aws-lc",
]

default-ring = [
    "leaf/default-ring",
]

default-openssl = [
    "leaf/default-openssl",
]

outbound-quic = [
    "leaf/outbound-quic",
]

auto-reload = ["leaf/auto-reload"]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
